--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,11 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+vite.config.js.timestamp-1668193454680*
+deploy.sh*
+
+public
+
 node_modules
 dist
 dist-ssr
