--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-intersection-observer": "^9.4.0",
-    "sass": "^1.55.0"
+    "react-spinners": "^0.13.8",
+    "sass": "^1.55.0",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.22",
